--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -3,4 +3,7 @@ block variables
 	-	pageTitle = 'Главная'
 	- page = 'home'
 block content
-	include ../modules/_top-menu
+	header.header
+		include ../modules/_top-menu
+		.header__content
+			img.header__text(src='../img/header-text.svg')
