--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -7,3 +7,5 @@ block content
 		include ../modules/_top-menu
 		.header__content
 			img.header__text(src='../img/header-text.svg')
+	.content
+		include ../blocks/_s-entry
