--- a/src/templates/modules/_top-menu.pug
+++ b/src/templates/modules/_top-menu.pug
@@ -2,7 +2,7 @@
 	.sandwich__line
 nav.menu
 	ul.menu__list
-		li.menu__item
+		li.menu__item.menu__item--active
 			a(href='' title='Главная').menu__link Главная
 		li.menu__item
 			a(href='#' title='Фото и Видео').menu__link Фото и Видео
