--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -9,3 +9,4 @@ block content
 			img.header__text(src='../img/header-text.svg')
 	.content
 		include ../blocks/_s-entry
+	include ../blocks/_footer
