--- a/src/templates/blocks/_footer.pug
+++ b/src/templates/blocks/_footer.pug
@@ -15,6 +15,6 @@ footer.footer
 						a(href='#' title='YouTube').social__link
 							+svg('youtube','social__ico i-youtube')
 		.footer__part
-			.copyright.social__copiright
+			a(href="https://htmlacademy.ru/" target="_blank" title='HTML ACADEMY').copyright.social__copiright
 				span.copyright__text Разработано
 				+svg('htmlacademy','copyright__ico i-htmlacademy')
