--- a/src/sass/modules/_icons.scss
+++ b/src/sass/modules/_icons.scss
@@ -17,3 +17,18 @@
 	width: 27px;
 	height: 34px;
 }
+
+.i-house{
+	width: 39px;
+	height: 37px;
+}
+
+.i-gift{
+	width: 32px;
+	height: 38px;
+}
+
+.i-burger{
+	width: 40px;
+	height: 35px;
+}
