--- a/src/templates/core/_mixins.pug
+++ b/src/templates/core/_mixins.pug
@@ -5,3 +5,5 @@ mixin svg(imgName,className)
 		- className = defaultClassName
 	svg(class=className)
 		use(xlink:href="./img/sprite.svg#" + imgName)
+
+//- card-info
