create map responsive map section

--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -10,4 +10,5 @@ block content
 	.content
 		include ../blocks/_s-entry
 		include ../blocks/_s-desk
+		include ../blocks/_s-map
 	include ../blocks/_footer
