--- a/src/templates/modules/_top-menu.pug
+++ b/src/templates/modules/_top-menu.pug
@@ -3,9 +3,9 @@
 nav.menu
 	ul.menu__list
 		li.menu__item.menu__item--active
-			a(href='' title='Главная').menu__link Главная
+			a(href='/' title='Главная').menu__link Главная
 		li.menu__item
-			a(href='#' title='Фото и Видео').menu__link Фото и Видео
+			a(href='photo.html' title='Фото и Видео').menu__link Фото и Видео
 		li.menu__item
 			a(href='' title='Форма отзвыва').menu__link Форма отзыва
 		li.menu__item
