--- a/src/templates/pages/photo.pug
+++ b/src/templates/pages/photo.pug
@@ -9,4 +9,5 @@ block content
 			+svg('sedona','header__text')
 	.content
 		include ../blocks/_s-photo
+		include ../blocks/_s-video
 	include ../blocks/_footer
