--- a/src/sass/blocks/_card-photo.scss
+++ b/src/sass/blocks/_card-photo.scss
@@ -2,14 +2,17 @@
 	@extend %reset;
 	text-align: left;
 	font-size: 14px;
+	&__img-wrap{
+		position: relative;
+	}
 	&__img{
 		display: block;
 		margin: 0 auto;
 		width: 100%;
-		margin-bottom: 18px;
 	}
 	&__content{
-
+		padding-top: 18px;
+		width: 100%;
 	}
 	&__name{
 		@extend %reset;
@@ -26,6 +29,7 @@
 		display: inline-block;
 		vertical-align: middle;
 		margin-right: 10px;
+		cursor: pointer;
 	}
 	&__like-number{
 		display: inline-block;
@@ -33,5 +37,45 @@
 		position: relative;
 		top: 2px;
 		vertical-align: middle;
+	}
+}
+
+@include apply-to($tablet){
+	.card-photo{
+		&__content{
+			background-color: #f2f2f2;
+			position: relative;
+			padding-bottom: 10px;
+			padding-left: 20px;
+		}
+		&__like{
+			text-align: right;
+			position: absolute;
+			right: 30px;
+			top: 49%;
+			transform: translate(0,-50%);
+		}
+		&__like-ico{
+			margin-right: 0;
+		}
+		&__img-wrap{
+			max-height: 267px;
+			overflow: hidden;
+		}
+	}
+}
+
+@include apply-to($desktop){
+	.card-photo{
+		position: relative;
+		&__content{
+			position: absolute;
+			bottom: 0;
+			color: $colorLight;
+			background-color: rgba($colorBase,.3);
+		}
+		&__like-ico{
+			fill: $colorLight;
+		}
 	}
 }
