--- a/src/templates/blocks/_s-photo.pug
+++ b/src/templates/blocks/_s-photo.pug
@@ -8,13 +8,14 @@ section.s-photo
 			br.s-photo__text-devider
 			|вам забыть о политике и экономике.
 	.s-photo__photos
-		.s-photo__part.s-photo-best
+		.s-photo__part.s-photo--best
 			.container
 				figure.card-photo.s-photo__card-photo
-					picture.card-photo__picture
-						source(media='(min-width: ' + desktop + ')' srcset='./img/photo-1-desktop.jpg')
-						source(media='(min-width: ' + tablet + ')' srcset='./img/photo-1-tablet.jpg')
-						img.card-photo__img(src='./img/photo-1-mobile.jpg')
+					a(href='#' title='photo-1').card-photo__img-wrap
+						picture
+							source(media='(min-width: ' + desktop + ')' srcset='./img/photo-1-desktop.jpg')
+							source(media='(min-width: ' + tablet + ')' srcset='./img/photo-1-tablet.jpg')
+							img.card-photo__img(src='./img/photo-1-mobile.jpg')
 					.card-photo__content
 						.card-photo__name неродные просторы
 						.card-photo__author Автор фото: Борис
@@ -24,10 +25,11 @@ section.s-photo
 		.s-photo__part
 			.container
 				figure.card-photo.s-photo__card-photo
-					picture.card-photo__picture
-						source(media='(min-width: ' + desktop + ')' srcset='./img/photo-2-desktop.jpg')
-						source(media='(min-width: ' + tablet + ')' srcset='./img/photo-2-tablet.jpg')
-						img.card-photo__img(src='./img/photo-2-mobile.jpg')
+					a(href='#' title='photo-2').card-photo__img-wrap
+						picture
+							source(media='(min-width: ' + desktop + ')' srcset='./img/photo-2-desktop.jpg')
+							source(media='(min-width: ' + tablet + ')' srcset='./img/photo-2-tablet.jpg')
+							img.card-photo__img(src='./img/photo-2-mobile.jpg')
 					.card-photo__content
 						.card-photo__name Местная растительность
 						.card-photo__author Автор фото: Сергей
@@ -37,12 +39,27 @@ section.s-photo
 		.s-photo__part
 			.container
 				figure.card-photo.s-photo__card-photo
-					picture.card-photo__picture
-						source(media='(min-width: ' + desktop + ')' srcset='./img/photo-3-desktop.jpg')
-						source(media='(min-width: ' + tablet + ')' srcset='./img/photo-3-tablet.jpg')
-						img.card-photo__img(src='./img/photo-3-mobile.jpg')
+					a(href='#' title='photo-3').card-photo__img-wrap
+						picture
+							source(media='(min-width: ' + desktop + ')' srcset='./img/photo-3-desktop.jpg')
+							source(media='(min-width: ' + tablet + ')' srcset='./img/photo-3-tablet.jpg')
+							img.card-photo__img(src='./img/photo-3-mobile.jpg')
 					.card-photo__content
 						.card-photo__name Дорога на север
+						.card-photo__author Автор фото: Петр
+						.card-photo__like
+							+svg('like','i-like card-photo__like-ico')
+							.card-photo__like-number 96
+		.s-photo__part
+			.container
+				figure.card-photo.s-photo__card-photo
+					a(href='#' title='photo-4').card-photo__img-wrap
+						picture
+							source(media='(min-width: ' + desktop + ')' srcset='./img/photo-4-desktop.jpg')
+							source(media='(min-width: ' + tablet + ')' srcset='./img/photo-4-tablet.jpg')
+							img.card-photo__img(src='./img/photo-4-mobile.jpg')
+					.card-photo__content
+						.card-photo__name Мост дьявола
 						.card-photo__author Автор фото: Антон
 						.card-photo__like
 							+svg('like','i-like card-photo__like-ico')
