--- a/src/templates/modules/_top-menu.pug
+++ b/src/templates/modules/_top-menu.pug
@@ -7,9 +7,9 @@ nav.menu
 		li.menu__item
 			a(href='photo.html' title='Фото и Видео').menu__link Фото и Видео
 		li.menu__item
-			a(href='' title='Форма отзвыва').menu__link Форма отзыва
+			a(href='form.html' title='Форма отзвыва').menu__link Форма отзыва
 		li.menu__item
-			a(href='#' title='HTML Academy').menu__link HTML Academy
+			a(href='https://htmlacademy.ru/' title='HTML Academy' target="_blank").menu__link HTML Academy
 .top-menu
 	figure.logo
 		picture.logo__container
