--- a/src/sass/blocks/_s-form.scss
+++ b/src/sass/blocks/_s-form.scss
@@ -2,6 +2,7 @@
 	text-align: center;
 	background-color: $colorLight;
 	padding-top: 39px;
+	@include clear();
 	&__title{
 		@extend %reset;
 		margin-bottom: 29px;
@@ -18,5 +19,94 @@
 	&__part{
 		@extend %reset;
 		border-top: 1px solid #e5e5e5;
+		width: 100%;
+	}
+}
+
+@include apply-to($tablet){
+	.s-form{
+		padding-top: 65px;
+		&__title{
+			font-size: 30px;
+		}
+		&__devider{
+			display: block;
+		}
+		&__text{
+			margin-bottom: 54px;
+		}
+		&__container{
+			display: flex;
+			flex-wrap: wrap;
+			max-width: 648px;
+			margin: 0 auto;
+			width: 100%;
+		}
+		&__part{
+			border: 0;
+			&:nth-of-type(1){
+				order: 2;
+				width: 50%;
+			}
+			&:nth-of-type(2){
+				order: 3;
+			}
+			&:nth-of-type(3){
+				order: 1;
+				width: 50%;
+				position: relative;
+				&:after{
+					content: '';
+					display: block;
+					height: 86%;
+					width: 1px;
+					background-color: #dbdbdb;
+					right: 0;
+					top: 24px;
+					bottom: 0;
+					position: absolute;
+				}
+			}
+			&:nth-of-type(4){
+				order: 4;
+			}
+			&:nth-of-type(5){
+				order: 5;
+			}
+		}
+		&__title-wrap{
+			position: relative;
+			&:after{
+				content: '';
+				display: block;
+				background-color: #dbdbdb;
+				width: 100%;
+				height: 1px;
+				position: absolute;
+				top: 50%;
+				left: 0;
+				z-index: 1;
+			}
+		}
+		&__title--line{
+			display: inline-block;
+			padding: 0 9%;
+			margin: 0;
+			background-color: $colorLight;
+			position: relative;
+			z-index: 10;
+		}
+	}
+}
+
+@include apply-to($desktop){
+	.s-form{
+		padding-top: 103px;
+		&__container{
+			max-width: 960px;
+		}
+		&__text{
+			margin-bottom: 41px;
+		}
 	}
 }
