--- a/src/sass/blocks/form/_contacts-info.scss
+++ b/src/sass/blocks/form/_contacts-info.scss
@@ -1,6 +1,7 @@
 .contats-info{
 	padding-top: 18px;
 	padding-bottom: 28px;
+	@include clear();
 	&__title{
 		margin-bottom: 27px;
 	}
@@ -14,5 +15,53 @@
 	.field__label{
 		margin-left: 21px;
 		margin-bottom: 10px;
+	}
+}
+
+@include apply-to($tablet){
+	.contats-info{
+		padding-bottom: 31px;
+		.s-form__title-wrap{
+			margin-bottom: 28px;
+		}
+		&__part{
+		margin-bottom: 29px;
+			&:last-child{
+				margin-bottom: 0;
+			}
+		}
+	}
+}
+
+@include apply-to($desktop){
+	.contats-info{
+		padding-bottom: 2px;
+		&__title{
+			margin-bottom: 45px;
+		}
+		&__part{
+			@include col(6);
+		}
+		.field__label{
+			display: inline-block;
+			width: auto;
+		}
+		.field__input-wrap{
+			display: inline-block;
+			width: 314px;
+		}
+		.field__label{
+			text-align: left;
+			margin: 0;
+			margin-right: 20px;
+		}
+		.field__label--textReplace{
+			font-size: 0;
+			&:after{
+				content : attr(data-text);
+				color: $colorBase;
+				font-size: 14px;
+			}
+		}
 	}
 }
