--- a/src/sass/blocks/form/_s-message.scss
+++ b/src/sass/blocks/form/_s-message.scss
@@ -10,4 +10,46 @@
 		line-height: em(22px);
 		margin-bottom: 52px;
 	}
+	&__info{
+		float: right;
+		position: relative;
+		top: 22px;
+		text-transform: uppercase;
+		font-size: 14px;
+		display: none;
+	}
+}
+
+
+@include apply-to($tablet){
+	.s-message{
+		padding-bottom: 60px;
+		.s-form__title-wrap{
+			margin-bottom: 55px;
+		}
+		.s-form__title--line{
+			padding: 0 12%;
+		}
+		&__textarea{
+			margin-bottom: 62px;
+		}
+		&__info{
+			display: block;
+		}
+		.button{
+			max-width: 324px;
+		}
+	}
+}
+
+@include apply-to($desktop){
+	.s-message{
+		padding-bottom: 65px;
+		&__textarea{
+			margin-bottom: 59px;
+		}
+		.button{
+			max-width: 480px;
+		}
+	}
 }
