--- a/src/sass/modules/form/_field.scss
+++ b/src/sass/modules/form/_field.scss
@@ -13,13 +13,23 @@
 		@extend %reset;
 		background-color: #f2f2f2;
 		font-family: 'PT Sans';
-		padding: 21px;
+		padding: 16px;
 		width: 100%;
+		border: 4px solid #f2f2f2;
+		transition: .2s;
 		&::placeholder{
 			color: $colorBase;
 			font-size: 18px;
 			font-weight: 900;
 		}
+		&:hover{
+			border-color: #e5e5e5;
+			background-color: #e5e5e5;
+		}
+		&:focus{
+			background-color: $colorLight;
+		}
+	
 	}
 	&__input-wrap{
 		position: relative;
